--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <link rel="stylesheet" href="style.css">
 <body>
 
-<h3>Using CSS to style an HTML Form</h3>
+<h1>Using CSS to style an HTML Form</h1>
+<h2>Html is styled with the css</h2>
 
 <div>
   <form action="/action_page.php">
